# uk-pvnet-app

./: .all-contributorsrc  .bumpversion.cfg  .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  scratch.ipynb  setup.py  test-docker-compose.yml
.github/workflows/: branch_ci.yml  build-docker.yaml  conda-pytest.yaml  docker-test.yaml  merged_ci.yml  pytest.yml  readme_model_table.yml  release.yaml  release_on_tag.yml  tag.yml  test_and_build.yml  workflows.yaml
configs/: data_configuration.yaml
newlint/: pyvenv.cfg
pvnet_app/: __init__.py  app.py  config.py  consts.py  data.py  dataloader.py  forecast_compiler.py  sentry.py  test_forecast_compiler.py  utils.py
pvnet_app/data/: gsp.py  nwp.py  satellite.py
pvnet_app/model_configs/: all_models.yaml  pydantic_models.py
scripts/: cache_default_models.py  cache_default_models.sh  download_live_data.ipynb  download_live_data.py  run_app_local_example.ipynb  run_local.ipynb  update_readme_table.py
src/pvnet_app/: __init__.py  adjuster.py  app.py  config.py  consts.py  data_platform.py  dataloader.py  dataset.py  forecast_compiler.py  forecaster.py  model_input_config.py  save.py  settings.py  utils.py  validate_forecast.py
src/pvnet_app/data/: batch_validation.py  gsp.py  gsp_backup_capacities_2026_02_04.csv  nwp.py  nwp_ecmwf_target_coords.nc  satellite.py  uk_gsp_locations_20250109.csv  uk_gsp_locations_20251204.csv  uk_gsp_locations_20260209_no_shetlands.csv  utils.py
src/pvnet_app/model_configs/: all_models.yaml  pydantic_models.py
src/pvnet_app/models/: catalogue.yaml  registry.py
tests/: conftest.py  test_app.py  test_app_legacy.py  test_data.py  test_datalaoder.py  test_forecast_compiler.py  test_forecaster.py  test_model_load.py  test_utils.py  test_validate_forecast.py
tests/data/: test_gsp.py  test_nwp.py  test_satellite.py
tests/fixtures/non_hrv_shell.zarr/: zarr.json
tests/fixtures/nwp_cloudcasting_shell.zarr/: zarr.json
tests/fixtures/nwp_cloudcasting_shell.zarr/variable/: zarr.json
tests/fixtures/nwp_cloudcasting_shell.zarr/y_geostationary/: zarr.json
tests/fixtures/nwp_ecmwf_shell.zarr/latitude/: zarr.json
tests/fixtures/nwp_ecmwf_shell.zarr/longitude/: zarr.json
tests/fixtures/nwp_ecmwf_shell.zarr/variable/: zarr.json
tests/fixtures/nwp_ukv_shell.zarr/: zarr.json
tests/fixtures/nwp_ukv_shell.zarr/x_laea/: zarr.json
tests/integration/: conftest.py  test_app.py  test_forecaster.py  test_read_from_data_platform.py  test_save_forecast_and_adjusted_forecast.py  test_save_to_data_platform.py
tests/integration/data/: test_gsp.py
tests/model_configs/: test_pydantic_models.py
tests/models/: test_registry.py
tests/test_data/: test.yaml
tests/test_data/non_hrv_shell.zarr/: .zmetadata  zarr.json
tests/test_data/non_hrv_shell.zarr/channel/: zarr.json
tests/test_data/non_hrv_shell.zarr/x_geostationary/: .zarray  0  zarr.json
tests/test_data/non_hrv_shell.zarr/x_osgb/: zarr.json
tests/test_data/non_hrv_shell.zarr/y_geostationary/: .zarray  0  zarr.json
tests/test_data/non_hrv_shell.zarr/y_osgb/: zarr.json
tests/test_data/nwp_cloudcasting_shell.zarr/: .zattrs  .zmetadata  zarr.json
tests/test_data/nwp_cloudcasting_shell.zarr/init_time/: .zattrs  zarr.json
tests/test_data/nwp_cloudcasting_shell.zarr/step/: .zattrs  0  zarr.json
tests/test_data/nwp_cloudcasting_shell.zarr/variable/: zarr.json
tests/test_data/nwp_cloudcasting_shell.zarr/x_geostationary/: zarr.json
tests/test_data/nwp_ecmwf_shell.zarr/: .zattrs  .zmetadata  zarr.json
tests/test_data/nwp_ecmwf_shell.zarr/init_time/: .zattrs  0  zarr.json
tests/test_data/nwp_ecmwf_shell.zarr/latitude/: .zarray  0  zarr.json
tests/test_data/nwp_ecmwf_shell.zarr/longitude/: .zarray  0
tests/test_data/nwp_ecmwf_shell.zarr/step/: .zarray  0  (+1 more)
tests/test_data/nwp_shell.zarr/: .zattrs  .zmetadata
tests/test_data/nwp_ukv_shell.zarr/: .zattrs  .zmetadata  zarr.json
tests/unit/: test_utils.py  test_validate_forecast.py
tests/unit/model_configs/: test_pydantic_models.py
tests/unit/models/: test_pydantic_models.py  test_registry.py
(+66 files in other folders)
