# --- PROJECT CONFIGURATION --- #

[build-system]
requires = ["setuptools>=67", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

# Metadata (see https://peps.python.org/pep-0621/)
[project]
name = "pvnet_app"
description = "Packaged version of OCF's PVNet model"
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12.0,<3.13"
license = {file = "LICENSE"}
authors = [
    { name = "James Fulton", email = "info@openclimatefix.org"},
    { name = "Peter Dudfield", email = "info@openclimatefix.org"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "PVNet-summation==0.3.7",
    "fsspec[s3]==2025.2.0",
    "huggingface-hub==0.28.1",
    "nowcasting_datamodel==1.7.2",
    "numpy==2.0.0",
    "ocf_data_sampler==0.2.22",
    "pandas==2.2.3",
    "pvnet==4.1.14",
    "pydantic==2.5.3",
    "pytorch-lightning==2.3.3",
    "requests==2.32.3",
    "sentry-sdk==2.21.0",
    # Since torch distributes CPU only packages as wheels, have to specify the target platform in order to pull the wheel compiled for that specific platform
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.3.1-cp312-none-macosx_11_0_arm64.whl ; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "torchvision @ https://download.pytorch.org/whl/cpu/torchvision-0.18.1-cp312-cp312-macosx_11_0_arm64.whl ; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.3.1%2Bcpu-cp312-cp312-linux_x86_64.whl ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "torchvision @ https://download.pytorch.org/whl/cpu/torchvision-0.18.1%2Bcpu-cp312-cp312-linux_x86_64.whl ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "typer==0.15.1",
    "xarray==2025.1.2",
    "dask==2025.4.1",
    "xesmf==0.8.8", # Requires ESMF to be installed
    "zarr==2.18.3",
    "numcodecs<0.16",
]

[dependency-groups]
dev = [
    # Testing
    "pytest",
    "pytest-cov",
    "unittest-xml-reporting",
    "testcontainers",
    # Linting and type checking
    "mypy",
    "ruff >= 0.9.2",
    "pandas-stubs",
    # LSP Support
    "python-lsp-server",
    "pylsp-mypy",
    "python-lsp-ruff",
]

[project.scripts]
# Put entrypoints in here
pvnet-app = "pvnet_app.app:run"

[project.urls]
repository = "https://github.com/openclimatefix/uk-pvnet-app"

[tool.setuptools.package-data]
"*" = ["*.nc", "*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true
dirty_template = "{tag}"

# --- LINTING AND TYPING CONFIGURATION --- #

# MyPy configuration
# * See https://mypy.readthedocs.io/en/stable/index.html
[tool.mypy]
python_version = "3.12"
dmypy = true
strict = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
plugins = [
    "numpy.typing.mypy_plugin",
]

# Ruff configuration
# * See https://beta.ruff.rs/docs/
[tool.ruff]
line-length = 100
indent-width = 4
exclude = ["__init__.py"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "W",   # whitespace and newlines
    "I",   # isort
    "UP",  # modernize
    "ANN", # flake8 type annotations
    "S",   # flake8 bandit
    "B",   # flake8 bugbear
    "C4",  # flake8 comprehensions
    "COM", # flake8 commas
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "DTZ", # flake8 datetimes
    "Q",   # flake8 quotes
    "TCH", # flake8 typecheck
    "D",   # pydocstyle
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
ignore = [
    "D203", "D213", "D215", "D400", "D401", "D404", "D406",
    "D407", "D408", "D409", "D413",
]

[tool.ruff.lint.per-file-ignores]
"test*" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 100

